Mail address corrected

--- a/README
+++ b/README
@@ -137,4 +137,5 @@ To open a log file additionally to the output (possible only once!)
 Feedback
 ========
 
-Send to ole@aip.de
+Send to python-cpl@liska.ath.cx
+
