Use "cdbs" for building python package

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,5 @@ python-cpl (0.1.0-1) lucid; urgency=low
 
   * Initial build
 
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue Sep 14 11:55:49 CEST 2010
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 14:29:29 +0200
+
