--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cpl (0.1.0-2) lucid; urgency=low
+
+  * Added dependency to cdbs
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 15:45:00 +0200
+
 python-cpl (0.1.0-1) lucid; urgency=low
 
   * Initial build
