--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,27 @@
+python-cpl (0.2.0-5) maverick; urgency=low
+
+  * Use setuptools instead of distutils
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200
+
+python-cpl (0.2.0-3) maverick; urgency=low
+
+  * Try to fix wrong install path site-packages 
+	(must be in dist-packages for python2.6).
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 09:30:00 +0200
+
+python-cpl (0.2.0-2) maverick; urgency=low
+
+  * Maverick (10.10) version
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 21 Sep 2010 09:01:00 +0200
+
 python-cpl (0.2.0-1) lucid; urgency=low
 
   * Many bugfixes, parameter and tag names in Recipe.__call_ are now prefixed.
 
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 16 Sep 2010 16:00:00 +0200
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Thu, 16 Sep 2010 16:00:00 +0200
 
 python-cpl (0.1.0-4) lucid; urgency=low
 
