--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cpl (0.3.0-1) maverick; urgency=low
+
+  * Sync with upstream: support python-style logging
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200
+
 python-cpl (0.2.1-1) maverick; urgency=low
 
   * Updated to latest git
