--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cpl (0.3.2-1) lucid; urgency=low
+
+  * Fix log level filter
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 25 Oct 2010 09:33:00 +0200
+
 python-cpl (0.3.1-2) maverick; urgency=low
 
   * Sync with upstream: limit max number of threads
