--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cpl (0.3.3-5~$DISTRIB1) $DISTRIB; urgency=low
+
+  * Allow Ctrl-C and kill tracedump for recipe processes
+
+ -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 14:36:00 +0100
+
 python-cpl (0.3.3-4~$DISTRIB1) $DISTRIB; urgency=low
 
   * Avoid deadlock on tracedump
