Preparing for Debian inclusion

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,120 +1,5 @@
-python-cpl (0.3.4-1~$DISTRIB1) $DISTRIB; urgency=low
+python-cpl (0.3.4-1) unstable; urgency=low
 
-  * Include DFS related class dfs.ProcessingInfo
+  * New package. Closes: #641636
 
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 24 May 2011 15:54:00 +0100
-
-python-cpl (0.3.3-6~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Better parsing of functions in tracedump
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 14:36:00 +0100
-
-python-cpl (0.3.3-5~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Allow Ctrl-C and kill tracedump for recipe processes
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 14:36:00 +0100
-
-python-cpl (0.3.3-4~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Avoid deadlock on tracedump
-  * Add function parameters to tracedump
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 14:36:00 +0100
-
-python-cpl (0.3.3-3~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Fix version number in setup.py
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 14:36:00 +0100
-
-python-cpl (0.3.3-2~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Fix version number
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 13:33:00 +0100
-
-python-cpl (0.3.3-1~$DISTRIB1) $DISTRIB; urgency=low
-
-  * Implement stacktracing on recipe crashing
-  * Set recipe name as process name (Linux only)
-  * Allow the parameters "param={'par':value, ...}, calib={'TAG1':frames}" 
-    additionally to "param_par=value, calib_TAG1=frames" in the recipe
-    execution.
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 07 Mar 2011 12:25:00 +0100
-
-python-cpl (0.3.2-2) maverick; urgency=low
-
-  * Fix log level filter
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 25 Oct 2010 09:33:00 +0200
-
-python-cpl (0.3.1-2) maverick; urgency=low
-
-  * Sync with upstream: limit max number of threads
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 18 Oct 2010 10:57:58 +0200
-
-python-cpl (0.3.0-1) maverick; urgency=low
-
-  * Sync with upstream: support python-style logging
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 11 Oct 2010 09:30:00 +0200
-
-python-cpl (0.2.1-1) maverick; urgency=low
-
-  * Updated to latest git
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200
-
-python-cpl (0.2.0-5) maverick; urgency=low
-
-  * Use setuptools instead of distutils
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200
-
-python-cpl (0.2.0-3) maverick; urgency=low
-
-  * Try to fix wrong install path site-packages 
-	(must be in dist-packages for python2.6).
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 09:30:00 +0200
-
-python-cpl (0.2.0-2) maverick; urgency=low
-
-  * Maverick (10.10) version
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 21 Sep 2010 09:01:00 +0200
-
-python-cpl (0.2.0-1) lucid; urgency=low
-
-  * Many bugfixes, parameter and tag names in Recipe.__call_ are now prefixed.
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Thu, 16 Sep 2010 16:00:00 +0200
-
-python-cpl (0.1.0-4) lucid; urgency=low
-
-  * Add Python-dev to the build dependencies
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 17:09:00 +0200
-
-python-cpl (0.1.0-3) lucid; urgency=low
-
-  * Use pycentral instead of pysupport to get rid of pyversion
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 16:37:00 +0200
-
-python-cpl (0.1.0-2) lucid; urgency=low
-
-  * Added dependency to cdbs
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 15:45:00 +0200
-
-python-cpl (0.1.0-1) lucid; urgency=low
-
-  * Initial build
-
- -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 14:29:29 +0200
-
+ -- Ole Streicher <debian@liska.ath.cx>  Mon, 17 Oct 2011 11:54:00 +0100
