Use README file for pypi description

--- a/README
+++ b/README
@@ -6,14 +6,11 @@ or as pyfits objects in memory.
 
 The Common Pipeline Library (CPL) comprises a set of ISO-C libraries that
 provide a comprehensive, efficient and robust software toolkit. It forms a
-basis for the creation of automated astronomical data-reduction tasks.
-
-One of the features provided by the CPL is the ability to create
-data-reduction algorithms that run as plugins (dynamic libraries). These are
-called "recipes" and are one of the main aspects of the CPL data-reduction
-development environment.
-
-More information about the CPL can be found here:
+basis for the creation of automated astronomical data-reduction tasks. One of
+the features provided by the CPL is the ability to create data-reduction
+algorithms that run as plugins (dynamic libraries). These are called "recipes"
+and are one of the main aspects of the CPL data-reduction development
+environment. More information about the CPL can be found here:
 
   http://www.eso.org/sci/software/cpl/
 
