--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Python interface for the Common Pipeline Library.
 
 This module can list, configure and execute CPL-based recipes from Python.
 The input, calibration and output data can be specified as FITS files
-or as pyfits objects in memory.
+or as astropy.io.fits objects in memory.
 
 The Common Pipeline Library (CPL) comprises a set of ISO-C libraries that
 provide a comprehensive, efficient and robust software toolkit. It forms a
@@ -23,7 +23,7 @@ Build instructions
 python-cpl requires:
 
    - Python 2.6 or later
-   - pyfits
+   - astropy or pyfits
 
 python-cpl uses the standard Python distutils system to build and install
 itself.  From the command line run::
