--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.6 (2013-11-03)
+
+* Support astropy
+* Handle parameter modes (CLI, CFG, ENV)
+* Support CPL 6.3.1
+
 Version 0.5 (2013-03-27)
 
 * Support CPL 6.3
