--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Version 0.6.2 (2104-03-18)
+
+* Be less strict on CPL compatibility
+* Check for cpl-6.4 compatibility
+
+Version 0.6.1 (2013-11-10)
+
+* Fix a crash when a recipe has no parameters
+
 Version 0.6 (2013-11-03)
 
 * Support astropy
