Add changelog entry for 0.7

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.7
+
+* Fully support Python3
+* Handle cpl.dfs.ProcessingInfo() for more than one history item
+* Better md5sum file path handling for ProcessingInfo
+
 Version 0.6.2 (2104-03-18)
 
 * Be less strict on CPL compatibility
