--- a/README
+++ b/README
@@ -1,4 +1,13 @@
-Python interface for the Common Pipeline Library.
+python-cpl
+==========
+
+Python interface for the Common Pipeline Library
+
+.. image:: https://pypip.in/v/python-cpl/badge.png
+    :target: https://pypi.python.org/pypi/python-cpl
+
+.. image:: https://travis-ci.org/olebole/python-cpl.png
+    :target: https://travis-ci.org/olebole/python-cpl
 
 This module can list, configure and execute CPL-based recipes from Python.
 The input, calibration and output data can be specified as FITS files
