--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-Version 0.7
+Version 0.7.1 (2016-02-22)
+
+* Add CPL 7.0.0 to compatibility list
+* Minor bugfixes
+
+Version 0.7 (2015-04-01)
 
 * Fully support Python3
 * Handle cpl.dfs.ProcessingInfo() for more than one history item
